@@ -2,8 +2,6 @@
 
 S3method(as.data.frame,sj_resample)
 S3method(as.integer,sj_resample)
-S3method(bootstrap,default)
-S3method(bootstrap,grouped_df)
 S3method(family,svyglm.nb)
 S3method(formula,svyglm.nb)
 S3method(model.frame,gee)
@@ -55,6 +53,7 @@ export(heteroskedastic)
 export(hoslem_gof)
 export(icc)
 export(inequ_trend)
+export(is_singular)
 export(md)
 export(mean_n)
 export(mic)
@@ -113,8 +112,6 @@ importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
-importFrom(dplyr,group_by_)
-importFrom(dplyr,group_vars)
 importFrom(dplyr,mutate)
 importFrom(dplyr,one_of)
 importFrom(dplyr,quos)
@@ -153,7 +150,6 @@ importFrom(sjmisc,add_columns)
 importFrom(sjmisc,is_empty)
 importFrom(sjmisc,is_num_fac)
 importFrom(sjmisc,recode_to)
-importFrom(sjmisc,remove_var)
 importFrom(sjmisc,std)
 importFrom(sjmisc,str_contains)
 importFrom(stats,anova)
