@@ -5,6 +5,7 @@ New functions:
 * `eta_sq()` and `omega_sq()` to compute (partial) eta-squared or omega-squared statistics for anova tables.
 * `anova_stats()` to compute a complete model summary, including (partial) eta-squared and omega-squared statistics for anova tables, returned as tidy data frame.
 * `svy_md()` as convenient shortcut to compute the median for variables from survey designs.
+* `is_singular()` to check a model fit for singularity in case of post-fitting convergence warnings.
 
 Changes to functions:
 * Computation of `r2()` for `glm`-objects is now based on log-Likelihood methods and also accounts for count models.
